--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -52,8 +52,8 @@
       color: var(--grey-dark-color-1);
     }
 
-    .fa-brands {
-    }
+    // .fa-brands {
+    // }
 
     .fa-airbnb {
       font-size: 3.4rem;
