--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 @import "./base";
 @import "./mixins";
+@import "./typography";
 @import "./components/header";
 @import "./components/navbar";
-// @import "./components/buttons";
-// @import "./components/drawer";
+@import "./components/buttons";
+@import "./components/drawer";
+@import "./components/cards";
+
 // @import "./components/footer";
