--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,5 +7,6 @@
 @import "./components/buttons";
 @import "./components/drawer";
 @import "./components/cards";
+@import "./components/footer";
 
 // @import "./components/footer";
