--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,4 +1,6 @@
 .btn {
+  z-index: 10;
+  position: relative;
   display: inline-block;
   color: var(--base-content);
   background-color: var(--base-150);
@@ -10,11 +12,9 @@
   border-radius: 25rem;
   transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
 
-  // &--back {
-  //   @include positionCenter;
-  // }
-
   &:hover {
+    backface-visibility: hidden;
+    z-index: 20;
     box-shadow: 0px 0px 8px 1px var(--base-drop-shadow);
   }
 
