--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -13,8 +13,14 @@
   cursor: pointer;
   perspective: 150rem;
   position: relative;
-  width: 25rem;
-  height: 38rem;
+  width: 26rem;
+  height: 37rem;
+
+  &__side--front {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
 
   &__body--back {
     display: flex;
@@ -23,12 +29,6 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-  }
-
-  &__side--front {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
   }
 
   &__header {
@@ -58,6 +58,7 @@
 
     &--back {
       transform: rotateY(-180deg);
+      opacity: 0;
       backface-visibility: hidden;
     }
   }
@@ -67,6 +68,7 @@
   }
 
   &:hover &__side--back {
+    opacity: 1;
     transform: rotateY(0deg);
   }
 }
