--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -28,7 +28,8 @@
   padding-top: 25rem;
   position: relative;
   width: 100%;
-  height: 115vh;
+  height: 100%;
+  // height: 115vh;
 
   .wave-top {
     height: 25rem;
