alienbnb form not completed yet.

--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -1,6 +1,6 @@
-.section--populars {
-  // padding: 0 6rem;
-}
+// .section--populars {
+//   // padding: 0 6rem;
+// }
 
 .row {
   margin-top: 7rem;
