--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -24,12 +24,15 @@
   }
 }
 
+.main {
+  @include positionCenter;
+}
+
 .section {
   padding-top: 25rem;
   position: relative;
   width: 100%;
   height: 100%;
-  // height: 115vh;
 
   .wave-top {
     height: 25rem;
