--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./mixins";
 @import "./typography";
 @import "./components/header";
+@import "./components/sections";
 @import "./components/navbar";
 @import "./components/buttons";
 @import "./components/drawer";
