--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -6,13 +6,13 @@
   background-color: var(--base-100);
 
   & form > *:last-child {
-    margin-top: 1rem;
+    margin-top: 0.6rem;
   }
 
   .form__heading {
     position: relative;
     top: -0.4rem;
-    color: var(--primary-focus);
+    color: var(--primary);
     text-align: center;
     letter-spacing: -0.6px;
     font-size: 2.6rem;
@@ -48,7 +48,7 @@
     font-size: 1.25rem;
     font-weight: 600;
     color: var(--base-content);
-    text-indent: 1rem;
+    text-indent: 1.4rem;
     transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
     opacity: 0;
     transform: translateY(-30px);
@@ -60,7 +60,7 @@
     box-shadow: 0px 0px 2px var(--base-drop-shadow);
     border-radius: 0.4rem;
     transition: all 0.4s ease-in-out;
-    border-bottom: 4px solid var(--base-200);
+    border-bottom: 4px solid var(--base-300);
 
     &:focus + .form__label,
     &:hover + .form__label {
@@ -84,7 +84,7 @@
     box-shadow: 0px 0px 2px var(--base-drop-shadow);
     border-radius: 0.4rem;
     transition: all 0.4s ease-in-out;
-    border-bottom: 4px solid var(--base-200);
+    border-bottom: 4px solid var(--base-300);
 
     &:focus + .form__label,
     &:hover + .form__label {
