--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -9,29 +9,17 @@
 /*
  * $breakpoint arguement choices (desktop first approach):
  * - phone
- * - tab-port
- * - tab-land
- * - big-desktop
+ * - tablet
 */
 @mixin respond($breakpoint) {
   @if $breakpoint == phone {
-    @media only screen and (max-width: 37.5em) {
+    @media only screen and (max-width: 600px) {
       @content;
-    } //600px
+    }
   }
-  @if $breakpoint == tab-port {
-    @media only screen and (max-width: 56.25em) {
+  @if $breakpoint == tablet {
+    @media only screen and (max-width: 960px) {
       @content;
-    } //900px
-  }
-  @if $breakpoint == tab-land {
-    @media only screen and (max-width: 75em) {
-      @content;
-    } //1200px
-  }
-  @if $breakpoint == big-desktop {
-    @media only screen and (min-width: 112.5em) {
-      @content;
-    } //1800
+    }
   }
 }
