--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -1,11 +1,22 @@
 .row {
+  @include respond(phone) {
+    padding: 2rem;
+    gap: 3rem;
+  }
   margin-top: 7rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 4rem;
+  height: auto;
 }
 
 .card {
+  @include respond(phone) {
+    width: 100%;
+    min-height: 100%;
+  }
+
   cursor: pointer;
   perspective: 150rem;
   position: relative;
@@ -13,6 +24,8 @@
   height: 37rem;
 
   &__side--front {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 2rem;
