--- a/src/sass/components/_drawer.scss
+++ b/src/sass/components/_drawer.scss
@@ -1,4 +1,13 @@
 .drawer {
+  @include respond(tablet) {
+    width: 32rem;
+    padding: 2.4rem;
+  }
+  @include respond(phone) {
+    width: 26.8rem;
+    padding: 2.8rem 1.6rem;
+  }
+
   position: fixed;
   z-index: 20;
   height: 100vh;
