--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,6 +1,5 @@
 .header {
-  background: rgb(102, 204, 138);
-  background: linear-gradient(138deg, var(--primary) 0%, var(--secondary) 100%);
+  background: linear-gradient(138deg, var(--primary) 5%, var(--secondary));
   position: relative;
   height: 100vh;
 
