--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -1,4 +1,8 @@
 .navbar {
+  @include respond(tablet) {
+    padding: 0;
+  }
+
   color: var(--primary-content);
   padding: 0 6rem;
   height: 7.2rem;
@@ -25,6 +29,9 @@
   }
 
   &__link {
+    @include respond(tablet) {
+      min-width: 10rem;
+    }
     padding: 0 2rem;
     letter-spacing: -0.25px;
     font-size: 1.6rem;
