--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-  z-index: 10;
+  z-index: 1;
   position: relative;
   display: inline-block;
   color: var(--base-content);
@@ -14,7 +14,6 @@
 
   &:hover {
     backface-visibility: hidden;
-    z-index: 20;
     box-shadow: 0px 0px 8px 1px var(--base-drop-shadow);
   }
 
@@ -39,6 +38,9 @@
 }
 
 .btn--toggle {
+  @include respond(phone) {
+    min-width: 9rem;
+  }
   margin-right: 2rem;
   cursor: pointer;
   border: 2px solid var(--base-drop-shadow);
@@ -49,7 +51,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1.2rem;
+  gap: 1rem;
 
   .user-avatar {
     width: 3.2rem;
