--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -23,24 +23,11 @@
   width: 26rem;
   height: 37rem;
 
-  &__side--front {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
-
-  &__body--back {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
-
   &__header {
+    @include respond(phone) {
+      height: 28rem;
+    }
+
     width: 100%;
     height: 24rem;
   }
@@ -65,9 +52,29 @@
     transition: all 1.4s cubic-bezier(0.075, 0.82, 0.165, 1);
     backface-visibility: hidden;
 
+    &--front {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+
     &--back {
       transform: rotateY(-180deg);
       opacity: 0;
+      backface-visibility: hidden;
+    }
+  }
+
+  &__body {
+    //
+    &--back {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
       backface-visibility: hidden;
     }
   }
