--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -17,13 +17,24 @@
 
   ul {
     display: flex;
-    gap: 0.5rem;
     font-size: 1.6rem;
     font-weight: 600;
   }
 
+  @include respond(phone) {
+    & > *:first-child,
+    & > *:last-child {
+      display: none;
+    }
+    & > *:nth-child(2) {
+      margin: auto;
+    }
+  }
+
   &__link {
-    gap: 1rem;
+    @include respond(phone) {
+      padding: 0.5rem;
+    }
     align-items: center;
     color: var(--base-content);
     transition: all 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
