--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,4 +1,6 @@
 .form-box {
+  overflow: hidden;
+  height: 100%;
   width: 33.6rem;
   box-shadow: 0px 0px 16px 6px var(--base-drop-shadow);
   border-radius: 0.8rem;
