--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   background: linear-gradient(138deg, var(--primary) 5%, var(--secondary));
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
 
   .wave-bottom {
     height: 35rem;
